# rustpython-findings

./: INDEX.md  README.md  REPORT-rustpython-defect-analysis.md
catalog/: known_panics.tsv
notes/: cpython-crash-corpus-vs-rustpython.md  cpython-test-coverage.md  maintainer-sample-comment.md  prior-art-rustpython-tracker.md  unbounded-eager-collect-parity-class.md
reports/RUSTPY-0001-thread-local-refcell-reentrancy/: meta.json  report.md
reports/RUSTPY-0002-structseq-field-getter-oob/: meta.json  report.md
reports/RUSTPY-0003-static-type-not-initialized/: meta.json  report.md  repro.py
reports/RUSTPY-0004-csv-lineterminator-unwrap/: meta.json  report.md  repro_writer_excel.py
reports/RUSTPY-0005-typing-idfunc-arity-oob/: meta.json  report.md  repro.py
repros/: RUSTPY-0001_thread_local_reentrancy.py  RUSTPY-0001_thread_local_reentrancy_VEHICLE_ONLY.py  RUSTPY-0002_structseq_oob.py  RUSTPY-0004_csv_unwrap.py  RUSTPY-0006_eval_surrogates.py  RUSTPY-0007a_genericalias_make_parameters_recursion.py  RUSTPY-0009_staticmethod_repr_unwrap.py  RUSTPY-0011_classmethod_repr_unwrap.py  RUSTPY-0016_posix_argiterable_unbounded_collect.py  RUSTPY-0017_ctypes_simple_int_too_large_expect.py  RUSTPY-0018_asyncio_enter_task_debug_format_segv.py  RUSTPY-0022_itertools_cycle_concurrent_oob.py  RUSTPY-0023_generator_resume_frame_stack_underflow.py  RUSTPY-0024_ctypes_float_arg_pointer_segv.py
scripts/: gen_known_panics.py
tools/unwrap_scan/: Cargo.toml  README.md  risky_sites.tsv  rust_modules.txt
tools/unwrap_scan/src/: main.rs
(+48 files in other folders)
