[package]
name = "unwrap_scan"
version = "0.1.0"
edition = "2021"
description = "Static scan of RustPython source for Python-reachable panic sites (unwrap/expect/panic!/index), attributed to (module, python_name, file:line) via syn."

[[bin]]
name = "unwrap_scan"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
walkdir = "2"

[profile.release]
opt-level = 2
